--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prepare": "husky install",
     "start": "node listen.js",
     "test-seed": "jest seed.test.js",
-    "seed-prod": "NODE_ENV=production npm run seed-dev"
+    "seed-prod": "cross-env NODE_ENV=production npm run seed-dev",
+    "start-prod": "cross-env NODE_ENV=production npm run start"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "husky": "^8.0.2",
     "jest": "^27.5.1",
