--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -37,7 +37,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy to production
-        uses: johnbeynon/render-deploy-action@v0.0.8
-        with:
-          api-key: ${{ secrets.RENDER_API_KEY }}
-          service-id: ${{ secrets.RENDER_SERVICE_ID }}
+        run: curl $\{{ secrets.RENDER_API_KEY }}
+#        uses: johnbeynon/render-deploy-action@v0.0.8
+#        with:
+#          api-key: ${{ secrets.RENDER_API_KEY }}
+#          service-id: ${{ secrets.RENDER_SERVICE_ID }}
