--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -37,7 +37,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy to production
-        run: curl $\{{ secrets.RENDER_API_KEY }}
+        run: |
+          curl --request GET \
+          --url 'https://api.render.com/v1/ ${{ secrets.RENDER_SERVICE_ID }} \
+          --header 'Accept: application/json' \
+          --header 'Authorization: Bearer ${{ secrets.RENDER_API_KEY }}'
 #        uses: johnbeynon/render-deploy-action@v0.0.8
 #        with:
 #          api-key: ${{ secrets.RENDER_API_KEY }}
