--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Deploy to production
         run: |
           curl --request GET \
-          --url 'https://api.render.com/v1/ ${{ secrets.RENDER_SERVICE_ID }} \
+          --url 'https://api.render.com/v1/srv-cv9f123qf0us73atri20 \
           --header 'Accept: application/json' \
           --header 'Authorization: Bearer ${{ secrets.RENDER_API_KEY }}'
 #        uses: johnbeynon/render-deploy-action@v0.0.8
