--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -38,9 +38,9 @@ jobs:
 
       - name: Deploy to production
         run: |
-          curl --request GET "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}" \
-          --header "Accept: application/json" \
-          --header "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}"
+          curl -X GET "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}" \
+          -H "Accept: application/json" \
+          -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}"
 #        uses: johnbeynon/render-deploy-action@v0.0.8
 #        with:
 #          api-key: ${{ secrets.RENDER_API_KEY }}
