--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Deploy to production
         run: |
-          curl -X GET "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}" \
+          curl -X GET "https://api.render.com/v1/services/srv-cv9f123qf0us73atri20" \
           -H "Accept: application/json" \
           -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}"
 #        uses: johnbeynon/render-deploy-action@v0.0.8
