--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Deploy to production
         run: |
-          curl -X GET "https://api.render.com/v1/services/srv-cv9f123qf0us73atri20" \
-          -H "Accept: application/json" \
+          curl -X GET "https://api.render.com/v1/services/srv-cv9f123qf0us73atri20" 
+          -H "Accept: application/json" 
           -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}"
 #        uses: johnbeynon/render-deploy-action@v0.0.8
 #        with:
