--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "jest-sorted": "^1.0.15"
   },
   "dependencies": {
-    "express": "^4.21.2",
-    "pg-format": "^1.0.4",
-    "supertest": "^7.0.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "husky": "^8.0.3",
-    "pg": "^8.14.0"
+    "pg": "^8.14.0",
+    "pg-format": "^1.0.4",
+    "supertest": "^7.0.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
